BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/MC_Cycle_Channel_vod__c.object
<CustomObject>
    <description>Defines the list of Channels a Cycle has.</description>
    <fields>
        <fullName>Channel_Criteria_vod__c</fullName>
        <description>Delimited list of criteria that determines how to query for transactions related to the channel.</description>
        <label>Channel Criteria</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Channel_Label_vod__c</fullName>
        <description>Label of the channel that is shown to end users. This can be written in any language.</description>
        <label>Channel Label</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Object_vod__c</fullName>
        <description>Full API Label of the transaction object. Example: Call2_vod__c or Sent_Email_vod__c.</description>
        <label>Channel Object</label>
        <picklist>
            <picklistValues>
                <fullName>Event_Attendee_vod__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EM_Attendee_vod__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call2_vod__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent_Email_vod__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multichannel_Activity_vod__c</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channel_Weight_vod__c</fullName>
        <description>Interaction value associated to the activities for this channel.</description>
        <label>Weight</label>
        <precision>5</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cycle_vod__c</fullName>
        <description>The cycle the channel activity is associated with.</description>
        <label>Cycle</label>
        <referenceTo>MC_Cycle_vod__c</referenceTo>
        <relationshipLabel>MC Cycle Channels</relationshipLabel>
        <relationshipName>MC_Cycle_Channels_vod</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>External_Id_vod__c</fullName>
        <description>External ID for data loading.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>VExternal_Id_vod__c</fullName>
        <description>System set to prevent duplicate channels/labels for a Cycle. Cycle_vod__c +__ + Channel_Object_vod__c +__ + Channel_Label_vod__c</description>
        <externalId>true</externalId>
        <label>Veeva External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>MC Cycle Channel</label>
    <nameField>
        <displayFormat>CC-{0000}</displayFormat>
        <label>Cycle Channel</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MC Cycle Channels</pluralLabel>
    <recordTypes>
        <fullName>Channel_Product_vod</fullName>
        <active>true</active>
        <description>Channel has products associated.</description>
        <label>Channel_Product_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Channel_vod</fullName>
        <active>true</active>
        <description>Channel does not have products.</description>
        <label>Channel_vod</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>